--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -10,6 +10,7 @@
 @import "globals/helpers";
 
 // Components
+@import "components/banners";
 @import "components/cards";
 // @import "components/buttons";
 @import "components/forms";
